Correct layout spacings on blog and docs

--- a/assets/scss/_main-container.scss
+++ b/assets/scss/_main-container.scss
@@ -13,15 +13,33 @@
     }
 }
 
-.td-main {
-    flex-grow: 1;
+.td-section .td-main,
+.td-page .td-main {
+    display: grid;
+    margin: 64px 0 0 0;
 
-    main {
-        @include media-breakpoint-up(md) {
-            padding-top: 5.5rem;
-        }
+    @include media-breakpoint-up(md) {
+        grid-template-columns: 260px 1fr;
+    }
 
+    @include media-breakpoint-up(lg) {
+        margin: 80px 0 0 0;
+    }
 
-        padding-bottom: 2rem;
+    @include media-breakpoint-up(xl) {
+        grid-template-columns: 1.65fr 6.7fr 1.65fr;
     }
 }
+
+.td-section main,
+.td-page main {
+    padding: 32px 15px;
+    position: relative;
+    overflow-x: auto;
+
+    @include media-breakpoint-up(md) {
+        padding: 32px;
+    }
+}
+
+
